welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: value unary_! is not a member of Int
while(!2 * biscuits = caseOrange + 1) {
      ^RunHalf:9: error: not found: value estSurBisc
	if (estSurBisc()) {bisc=bisc + 1}
            ^